tests/reference/asr-dim_assgn_test-4df3c08.stderr
input:2:1 semantic error: Cannot specify dimensions both ways
integer, private, dimension(2,2) :: a(2,2) 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
